# recruitment-hotel

./: .gitignore  Cargo.toml  LICENSE
docs/: assignment.md
src/: lib.rs  main.rs
src/convert/: data.rs  mod.rs
tests/: output_file.rs
