[package]
name = "recruitment-hotel"
version = "0.1.0"
authors = ["outfrost <kotlet.bahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
csv = "1.1.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
